# pcap-diff

./: .gitignore  README.md  TODO.md  create-portable.sh  flake.nix  pyproject.toml
src/pcap_diff/: __init__.py  main.py  models.py  packet_differ.py  packet_parser.py  tui.py
src/pcap_diff/ui/: __init__.py
src/pcap_diff/ui/widgets/: __init__.py
src/pcap_diff/utils/: __init__.py
tests/: __init__.py
